CSS done/responsive does not work and the svg does not work

--- a/index.html
+++ b/index.html
@@ -22,49 +22,66 @@
           </ul>
         </nav>
         <header class="main-content">
-          <img src="/images/npm-logo.png" alt="npm logo">
-            <input type="text" name="search" value="find packages">
-            <a href="#">Sign up</a>
-            <a href="#">Log in <img src="/images/bear-logo.png" alt="bear"></a>
+          <div class="search">
+            <img src="/images/npm-logo.png" alt="npm logo">
+              <input type="text" class="search-bar" value="find packages">
+              
+                <a href="#">Sign up</a>
+                <a href="#">Log in </a>
+              
+              <img class="bear" src="/images/bear-logo.png" alt="bear">
+          </div>
+          <div class="heading">
             <h1>Build Amazing Things</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero doloremque ipsa impedit nobis, nostrum saepe. Possimus vitae nam excepturi accusamus.</p>
             <a href="#">Sign up for npm</a>
+          </div>
         </header>
         <section class="general">
           <img src="/images/collaboration.svg" alt="collab">
-          <h2>npm Org is powerful collaberation - for free</h2>
-          <ul>
-            <li>Encourage code discovery and re-use within teams.</li>
-            <li>Publish and control access to your own namespace</li>
-            <li>Manage public and private code with the same workflow.</li>
-          </ul>
-          <a href="#">Sign up for Orgs</a><br>
-          <a href="#">Learn more</a>
+          <div class="general-info">
+            <h2>npm Org is powerful collaberation - for free</h2>
+            <ul>
+              <li>Encourage code discovery and re-use within teams.</li>
+              <li>Publish and control access to your own namespace</li>
+              <li>Manage public and private code with the same workflow.</li>
+            </ul>
+            <a class = "sign-up" href="#">Sign up for Orgs</a><br>
+            <h5><a href="#">Learn More</a></h5>
+        </div>
         </section>
         <section class="about">
-          <h2>What is npm?</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus cupiditate ipsum nihil accusantium id exercitationem quod temporibus rerum cumque eligendi.</p>
-          <a href="#">Insatall npm</a>
+          <div class="about-content">
+            <h2>What is npm?</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus cupiditate ipsum nihil accusantium id exercitationem quod temporibus rerum cumque eligendi.</p>
+            <a href="#">Insatall npm</a>
+          </div>
+          <div class="about-img">
+            <img src="/images/forklift.svg" alt="test">
+          </div>
         </section>
         <section class="create">
+          <div class="create-heading">
           <h2>What can you make with 475,000 Building Blocks?</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptatem.</p>
-            <div>
-              <img src="/images/binoculars.svg" alt="bino">
-              <h5>Find</h5>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, enim.</p>
-            </div>
-            <div>
-              <img src="/images/mountain-flag.svg" alt="flag">
-              <h5>Discover</h5>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, enim.</p>
-            </div>
-            <div>
-              <img src="/images/backpack.svg" alt="pack">
-              <h5>Build</h5>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, enim.</p>
-            </div>
-
+          </div>
+            <div class="flex-container">
+                <div class="item-1">
+                  <img src="/images/binoculars.svg" alt="bino">
+                  <h5>Find</h5>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, enim.</p>
+              </div>
+              <div class="item-1">
+                  <img src="/images/mountain-flag.svg" alt="flag">
+                  <h5>Discover</h5>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, enim.</p>
+              </div>
+              <div class="item-1">
+                  <img src="/images/backpack.svg" alt="pack">
+                  <h5>Build</h5>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, enim.</p>
+              </div>
+          </div>
         </section>
 </body>
 </html>
