--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         </nav>
         <header class="main-content">
           <div class="search">
-            <img src="/images/npm-logo.png" alt="npm logo">
+            <img src="images/npm-logo.png" alt="npm logo">
               <input type="text" class="search-bar" value="find packages">
               
                 <a href="#">Sign up</a>
                 <a href="#">Log in </a>
               
-              <img class="bear" src="/images/bear-logo.png" alt="bear">
+              <img class="bear" src="images/bear-logo.png" alt="bear">
           </div>
           <div class="heading">
             <h1>Build Amazing Things</h1>
@@ -38,7 +38,7 @@
           </div>
         </header>
         <section class="general">
-          <img src="/images/collaboration.svg" alt="collab">
+          <img src="images/collaboration.svg" alt="collab">
           <div class="general-info">
             <h2>npm Org is powerful collaberation - for free</h2>
             <ul>
@@ -56,9 +56,6 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus cupiditate ipsum nihil accusantium id exercitationem quod temporibus rerum cumque eligendi.</p>
             <a href="#">Insatall npm</a>
           </div>
-          <div class="about-img">
-            <img src="/images/forklift.svg" alt="test">
-          </div>
         </section>
         <section class="create">
           <div class="create-heading">
@@ -67,17 +64,17 @@
           </div>
             <div class="flex-container">
                 <div class="item-1">
-                  <img src="/images/binoculars.svg" alt="bino">
+                  <img src="images/binoculars.svg" alt="bino">
                   <h5>Find</h5>
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, enim.</p>
               </div>
               <div class="item-1">
-                  <img src="/images/mountain-flag.svg" alt="flag">
+                  <img src="images/mountain-flag.svg" alt="flag">
                   <h5>Discover</h5>
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, enim.</p>
               </div>
               <div class="item-1">
-                  <img src="/images/backpack.svg" alt="pack">
+                  <img src="images/backpack.svg" alt="pack">
                   <h5>Build</h5>
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, enim.</p>
               </div>
